--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+tag.html
+video_for_ck.html
+tag_list.html
+show_videolist.html
+show_video.html
+message.html
+play_list.html
+rss.html
+video_album.html
+category_video.html
+header_min.html
